[build-system]
requires = [
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "uniton"
description = "uniton - Your tool for units"
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy==2.1.2",
    "pint==0.24.3"
]
dynamic = [ "version",]
authors = [
    { name = "Lorem Ipsum", email = "lorem@ipsum.com" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://uniton.readthedocs.io"
Repository = "https://github.com/pyiron/uniton"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "uniton/_version.py"
parentdir_prefix = "uniton"
tag_prefix = "uniton-"

[tool.setuptools.packages.find]
include = [ "uniton*",]

[tool.setuptools.dynamic.version]
attr = "uniton.__version__"
